[package]
name = "pinocchio-clmm-raydium"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
pinocchio = "0.9.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
shank = "0.4.5"
thiserror = {version="2.0.17", default-features = false }
